--- a/partials/detail.html
+++ b/partials/detail.html
@@ -2,4 +2,7 @@
     <li><a href="#">Accueil</a> <span class="divider">/</span></li>
     <li class="active">{{item.name}}</li>
 </ul>
-<h1>{{item.name}}<h1>
+<div class="well">
+    <h1>{{item.name}}</h1>
+    <p>{{item.text}}</p>
+</div>
