--- a/partials/list.html
+++ b/partials/list.html
@@ -1,4 +1,4 @@
-<div>
+<div class="well">
     <div class="media" ng-repeat="item in items | filter:query">
         <a href="#/detail/{{item.id}}" class="pull-left">
             <img src="http://placehold.it/100x100">
@@ -8,15 +8,16 @@
             {{item.text}}
         </div>
     </div>
-</div>
 
-<div class="pagination" align="center">
-    <ul>
-        <li class="disabled"><a href="#">«</a></li>
-        <li class="active"><a href="#">1</a></li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">»</a></li>
-    </ul>
+    <div class="pagination" align="center">
+        <ul>
+            <li class="disabled"><a href="#">«</a></li>
+            <li class="active"><a href="#">1</a></li>
+            <li><a href="#">2</a></li>
+            <li><a href="#">3</a></li>
+            <li><a href="#">4</a></li>
+            <li><a href="#">»</a></li>
+        </ul>
+    </div>
+
 </div>
