--- a/partials/list.html
+++ b/partials/list.html
@@ -1,15 +1,34 @@
 <div class="well">
-    <div class="media" ng-repeat="item in items | filter:query">
+    <!--
+    Inline style
+    <div class="media" ng-repeat="item in items">
         <a href="#/detail/{{item.id}}" class="pull-left">
-            <img src="http://placehold.it/100x100">
+            <img ng-src="{{imageUrl}}{{item.id}}">
         </a>
         <div class="media-body">
             <h4 class="media-heading">{{item.name}}</h4>
             {{item.text}}
         </div>
+    </div>-->
+    <div class="row-fluid" id="items">
+        <ul class="thumbnails">
+            <li class="span4 item" ng-repeat="item in items" showonhoverparent>
+                <a href="#/detail/{{item.id}}" class="thumbnail">
+                    <img ng-src="{{imageUrl}}{{item.id}}" width="245">
+                    <div class="slide">
+                        <div class="caption">
+                            <h4>{{item.name}}</h4>
+                        </div>
+                        <p>{{item.text}}</p>
+                    </div>                
+                </a>
+            </li>
+        </ul>
     </div>
 
-    <div class="pagination" align="center">
+    <div class="alert alert-error" ng-show="fetchError"><strong>Merde!</strong> Erreur lors de la requête au serveur.</div>
+
+    <!--<div class="pagination" align="center">
         <ul>
             <li class="disabled"><a href="#">«</a></li>
             <li class="active"><a href="#">1</a></li>
@@ -18,6 +37,6 @@
             <li><a href="#">4</a></li>
             <li><a href="#">»</a></li>
         </ul>
-    </div>
+    </div>-->
 
 </div>
