--- a/partials/album.html
+++ b/partials/album.html
@@ -5,7 +5,9 @@
 </ul>
 <div class="well">
     <div class="page-header">        
-        <h1>{{item.name.0}} <small><!-- Artist names --></small></h1>
+        <h1>{{item.name.0}} <small>
+            <span ng-repeat="artist in artists">{{artist.name.0}}</span>
+        </small></h1>
     </div>
     <div class="row-fluid">
         <div class="span3">
@@ -14,16 +16,26 @@
             </div>
         </div>
         <div class="span9">
-            <h2>Chansons</h2>
-            <ul>
-                <li ng-repeat="track in item.track_names">{{track}}</li>
-            </ul>
-            <h2>Date de lancement</h2>
-            <p>{{item.release_date.0}}</p>
-            <h2>Labels</h2>
-            <ul class="inline">
-                <li ng-repeat="label in item.labels">{{label}}</li>
-            </ul>
+            <div ng-show="item.track_names">
+                <h2>Chansons</h2>
+                <ul>
+                    <li ng-repeat="track in item.track_names">{{track}}</li>
+                </ul>
+            </div>
+            <div ng-show="item.release_date">
+                <h2>Date de lancement</h2>
+                <p>{{item.release_date.0}}</p>
+            </div>
+            <div ng-show="item.labels">
+                <h2>Labels</h2>
+                <ul class="inline">
+                    <li ng-repeat="label in item.labels">{{label}}</li>
+                </ul>
+            </div>
+             <div ng-show="item.ftext">
+                <h2>Description</h2>
+                <p ng-bind-html-unsafe="item.ftext"></p>
+            </div>
         </div>
     </div>
     <div class="clearfix"></div>
