--- a/partials/artist.html
+++ b/partials/artist.html
@@ -15,24 +15,33 @@
         </div>
         <div class="span9">
             <h2>Genres</h2>
+            <div ng-show="item.genres">
             <ul class="inline">
                 <li ng-repeat="genre in item.genres">{{genre}}</li>
             </ul>
+        </div>
+        <div ng-show="item.group_names">
             <h2>Groupes</h2>
             <ul class="inline">
                 <li ng-repeat="group in item.group_names">{{group}}</li>
             </ul>
+        </div>
+        <div ng-show="item.instruments_played">
             <h2>Instruments</h2>
             <ul class="inline">
                 <li ng-repeat="instrument in item.instruments_played">{{instrument}}</li>
             </ul>
-            <h2>Labels</h2>
-            <ul class="inline">
-                <li ng-repeat="label in item.labels">{{label}}</li>
-            </ul>
-            <h2>Description</h2>
-            <p>{{item.text}}</p>
         </div>
+         <div ng-show="item.labels">
+                <h2>Labels</h2>
+                <ul class="inline">
+                    <li ng-repeat="label in item.labels">{{label}}</li>
+                </ul>
+            </div>
+             <div ng-show="item.ftext">
+                <h2>Description</h2>
+                <p ng-bind-html-unsafe="item.ftext"></p>
+            </div>
     </div>
     <div class="clearfix"></div>
 </div>
